# c-capnproto

./: CMakeLists.txt
lib/: capn-malloc.c  capnp_c.h
